iptables
# Generated by iptables-save v1.4.7 on Tue Jan 27 14:15:33 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [17:1932]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3306 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 21888 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22999 -j ACCEPT 
-A INPUT -s 10.170.196.18/32 -p tcp -m tcp --dport 11211 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 10100:10110 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 11211 -j DROP 
-A INPUT -p icmp -m limit --limit 12/min --limit-burst 2 -j DROP 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 20/sec --limit-burst 200 -j ACCEPT 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 20/sec --limit-burst 200 -j ACCEPT 
-A FORWARD -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT 
-A FORWARD -f -m limit --limit 100/sec --limit-burst 100 -j ACCEPT 
COMMIT
# Completed on Tue Jan 27 14:15:33 2015
